--- a/apps/bgd/base/bgd-svc.yaml
+++ b/apps/bgd/base/bgd-svc.yaml
@@ -3,9 +3,9 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: bgd
-  name: bgd
-  namespace: bgd
+    app: lama
+  name: lama
+  namespace: lama
 spec:
   type: NodePort
   ports:
@@ -13,5 +13,5 @@ spec:
     protocol: TCP
     targetPort: 8080
   selector:
-    app: bgd
+    app: lama
 ---
