--- a/apps/bgd/overlays/bgd/bgd-ingress.yaml
+++ b/apps/bgd/overlays/bgd/bgd-ingress.yaml
@@ -1,16 +1,16 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: bgd
+  name: lama
 spec:
   rules:
-    - host: bgd.devnation
+    - host: lama.devnation
       http:
         paths:
           - path: /
             pathType: Prefix
             backend:
               service:
-                name: bgd
+                name: lama
                 port:
                   number: 8080
