--- a/apps/bgd/overlays/bgd/bgd-deployment.yaml
+++ b/apps/bgd/overlays/bgd/bgd-deployment.yaml
@@ -19,7 +19,7 @@ spec:
         app: lama
     spec:
       containers:
-      - image: quay.io/redhatworkshops/bgd:latest
+      - image: nawang81/lama_k8s:latest
         name: lama
         env:
         - name: COLOR
