--- a/apps/bgd/overlays/bgd/bgd-ingress.yaml
+++ b/apps/bgd/overlays/bgd/bgd-ingress.yaml
@@ -14,3 +14,13 @@ spec:
                 name: lama
                 port:
                   number: 8080
+    - host: lamadai.devnation
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: lamadai
+                port:
+                  number: 8080
