--- a/apps/bgd/overlays/bgd/bgd-ingress.yaml
+++ b/apps/bgd/overlays/bgd/bgd-ingress.yaml
@@ -11,13 +11,13 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: lama
+                name: lama-service
                 port:
                   number: 8080
           - path: /lamadai
             pathType: Prefix
             backend:
               service:
-                name: lamadai
+                name: lamadai-service
                 port:
                   number: 8080
