--- a/apps/bgd/overlays/bgd/lama-deployment-svc.yaml
+++ b/apps/bgd/overlays/bgd/lama-deployment-svc.yaml
@@ -31,7 +31,7 @@ kind: Service
 metadata:
   labels:
     app: lamadai
-  name: lamadai
+  name: lamadai-service
   namespace: lama
 spec:
   type: NodePort
