--- a/apps/bgd/overlays/bgd/bgd-ingress.yaml
+++ b/apps/bgd/overlays/bgd/bgd-ingress.yaml
@@ -14,7 +14,7 @@ spec:
                 name: lama-service
                 port:
                   number: 8080
-          - path: /lamadai
+          - path: /lama
             pathType: Prefix
             backend:
               service:
