--- a/apps/bgd/overlays/bgd/bgd-ingress.yaml
+++ b/apps/bgd/overlays/bgd/bgd-ingress.yaml
@@ -18,7 +18,7 @@ spec:
     - host: lamadai.devnation
       http:
         paths:
-          - path: /lama
+          - path: /
             pathType: Prefix
             backend:
               service:
