--- a/apps/bgd/overlays/bgd/bgd-ingress.yaml
+++ b/apps/bgd/overlays/bgd/bgd-ingress.yaml
@@ -25,7 +25,7 @@ spec:
                 name: lamadai-service
                 port:
                   number: 8080
-          - path: /lamadai
+          - path: "/lamadai"
             pathType: Prefix
             backend:
               service:
