--- a/apps/bgd/overlays/bgd/bgd-ingress.yaml
+++ b/apps/bgd/overlays/bgd/bgd-ingress.yaml
@@ -34,11 +34,18 @@ spec:
                 name: lamadai2-service
                 port:
                   number: 8080
-          - path: /lamanginx
+          - path: /v2
             pathType: Prefix
             backend:
               service:
                 name: lamanginx-service
+                port:
+                  number: 80
+          - path: /v3
+            pathType: Prefix
+            backend:
+              service:
+                name: lamanginx2-service
                 port:
                   number: 80
 ---
