--- a/apps/bgd/overlays/bgd/new-ingress.yaml
+++ b/apps/bgd/overlays/bgd/new-ingress.yaml
@@ -2,7 +2,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: lama
+  name: lama2
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /$2
 spec:
