--- a/apps/bgd/overlays/bgd/bgd-ingress.yaml
+++ b/apps/bgd/overlays/bgd/bgd-ingress.yaml
@@ -4,7 +4,7 @@ kind: Ingress
 metadata:
   name: lama
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
 spec:
   rules:
     - host: lama.devnation
@@ -27,14 +27,14 @@ spec:
                 name: lamadai-service
                 port:
                   number: 8080
-          - path: /v2
+          - path: /v2(/|$)(.*)
             pathType: Prefix
             backend:
               service:
                 name: lamanginx-service
                 port:
                   number: 80
-          - path: /v3
+          - path: /v3(/|$)(.*)
             pathType: Prefix
             backend:
               service:
