--- a/apps/bgd/overlays/bgd/orginal-ingress.yaml
+++ b/apps/bgd/overlays/bgd/orginal-ingress.yaml
@@ -1,4 +1,3 @@
----
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
@@ -8,7 +7,7 @@ spec:
     - host: lama.devnation
       http:
         paths:
-          - path: 
+          - path: /
             pathType: Prefix
             backend:
               service:
